# mtc_pour

./: CMakeLists.txt  package.xml
benchmark/: playground.ipynb  prepare_dataframe.py  run_matrix.sh
config/: upright_constraint.yaml
include/moveit/task_constructor/stages/: pour_into.h
include/mtc_pour/: demo_utils.hpp
launch/: generate_cadb.launch  prerequisites.launch  tams_ur5_demo_prerequisites.launch
meshes/: bottle_binary.stl  glass_aligned-binary.stl  glass_binary.stl
src/: demo_utils.hpp  mtc_pour_baxter_demo.cpp  mtc_pour_tams_ur5_demo.cpp  pour_into.cpp  pour_into.h  tams_ur5_pouring_mtc_demo.cpp
