<?xml version="1.0"?>
<package format="2">
  <name>tams_ur5_pouring_mtc</name>
  <version>0.0.0</version>
  <description>The tams_ur5_pouring_mtc package</description>

  <maintainer email="me@v4hn.de">Michael 'v4hn' Goerner</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>moveit_task_constructor_core</build_depend>

  <exec_depend>moveit_task_constructor_core</exec_depend>

  <export>
  </export>
</package>
