<?xml version="1.0"?>
<package format="2">
  <name>mtc_pour</name>
  <version>0.0.0</version>
  <description>Implement pouring stage and examples</description>

  <maintainer email="me@v4hn.de">Michael 'v4hn' Goerner</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>moveit_core</depend>
  <depend>moveit_task_constructor_core</depend>
  <depend>rviz_marker_tools</depend>
  <depend>roscpp</depend>
  <depend>moveit_ros_planning_interface</depend>
</package>
